# meta_kanren

./: CMakeLists.txt  README.org
metakanren/: README.org  core.hpp  list_processing.hpp  metakanren.hpp  types.hpp  user.hpp
test/: a_and_b_test.cpp  and_test.cpp  assp_test.cpp  cons_test.cpp  five_test.cpp  take2_test.cpp  take_all_test.cpp  unit_test.cpp
